# llm

./: .gitignore  COLAB.md  PROJECT_PRESENTATION.md  README.md  bpe32k_tokenizer_scratch_model.ipynb  colab_tiny_llm.ipynb  current_situation.md  hf_tokenizer.py  pyproject.toml  qwen3_0_6b_local.ipynb  qwen_tokenizer_scratch_model.ipynb  step10_generate.py  step13_bpe_tokenizer.py  step15_prepare_wikitext2.py  step16_prepare_alpaca.py  step17_prepare_assistant_sft.py  step18_prepare_assistant_tokenizer_train.py  step19_prepare_assistant_eos.py  step1_tokenizer.py  step20_prepare_dolly.py  step21_prepare_bea_grammar.py  step22_prepare_free_tokenizer_train.py  step24_generate_qwen3.py  step25_inspect_qwen3.py  step26_compare_tokenizers.py  step27_test_qwen3.py  step28_estimate_scratch_model.py  step29_prepare_fineweb_edu.py  step2_training_samples.py  step30_prepare_alpaca_cleaned.py  step31_train_english_hf_tokenizer.py  step32_tokenize_pretrain_shards.py  step3_tiny_llama_parts.py  step4_rope.py  step5_attention.py  step6_mlp.py  step7_decoder_layer.py  step8_tiny_transformer.py  step9_train_tiny_transformer.py
download/: step11_download_tiny_shakespeare.py  step12_download_wikitext2.py  step23_download_qwen3.py
