[project]
name = "tiny-llm-lessons"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "torch",
    "tqdm",
    "datasets",
    "tokenizers",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
