[project]
name = "tiny-llm-lessons"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "torch",
    "tqdm",
    "datasets",
    "tokenizers",
    "transformers>=5.7.0",
    "accelerate>=1.13.0",
    "safetensors>=0.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
